--- a/ch02/Docker/Dockerfile
+++ b/ch02/Docker/Dockerfile
@@ -24,4 +24,7 @@ RUN /install.sh
 ENV PATH /root/miniconda3/bin:$PATH
 
 # execute IPython when container is run
-CMD ["ipython"]
+# CMD ["ipython"]
+
+
+# docker run -td --name pat py4at:1
